# DS-Project-Template

./: README.md  environment.yml  setup.cfg
data/: README.md
docs/: index.md  setup.md  usage.md
notebooks/Preprocessing/: preprocess-epo-MISSING_KEY_PRESS.ipynb  preprocess_CLBP.ipynb  source_localization.ipynb
src/: __init__.py
src/analysis/: __init__.py
src/configs/: __init__.py  config.py  readme.md
src/preprocessing/: __init__.py  processor.py
src/utils/: __init__.py  config.py
src/visualization/: __init__.py  plot_results.py
