[metadata]
name = DS-Project-Template
version = 1.0
author = George Kenefati
author_email = georgekenefati98@gmail.com
description = Project template for DS projects
long_description = file: README.md
long_description_content_type = text/markdown
url = project_url.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE


[options]
packages = find:

[options.packages.find]
include = src